# fastdata-client

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  test.py
bbmirror_client/: __init__.py  client.py  config.py  models.py
fastdata_client/: __init__.py
fastdata_client/clients/: bloomberg.py  gie.py
fastdata_client/models/: gie.py
